--- a/src/Savvyio/Savvyio.csproj
+++ b/src/Savvyio/Savvyio.csproj
@@ -1,15 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Extensions.Core" Version="6.3.0-preview.19" />
-    <PackageReference Include="Cuemon.Extensions.Collections.Generic" Version="6.3.0-preview.19" />
-    <PackageReference Include="Cuemon.Extensions.DependencyInjection" Version="6.3.0-preview.19" />
-    <PackageReference Include="Cuemon.Extensions.Reflection" Version="6.3.0-preview.19" />
+    <PackageReference Include="Cuemon.Extensions.Core" Version="6.3.0" />
+    <PackageReference Include="Cuemon.Extensions.Collections.Generic" Version="6.3.0" />
+    <PackageReference Include="Cuemon.Extensions.DependencyInjection" Version="6.3.0" />
+    <PackageReference Include="Cuemon.Extensions.Reflection" Version="6.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Storage\" />
-    <Folder Include="Queries\" />
   </ItemGroup>
 
 </Project>
