--- a/test/Savvyio.Tests/Savvyio.Tests.csproj
+++ b/test/Savvyio.Tests/Savvyio.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Security.Cryptography" Version="6.3.0-preview.17" />
+    <PackageReference Include="Cuemon.Security.Cryptography" Version="6.3.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="Cuemon.Extensions.Xunit.Hosting" Version="6.3.0-preview.17" />
+    <PackageReference Update="Cuemon.Extensions.Xunit.Hosting" Version="6.3.0" />
   </ItemGroup>
 
 </Project>
