--- a/.azure/pipelines.yml
+++ b/.azure/pipelines.yml
@@ -5,12 +5,10 @@ trigger:
     - development
   paths:
     exclude:
+    - .azure
+    - .docfx
     - .github
     - .nuget
-    - .pipelines/azure
-    - .docfx
-    - azure-pipelines.yml
-    - docker-compose.yml
     - LICENSE.md
     - README.md
 
