--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -2,14 +2,15 @@
   - job: BuildDotNet6_0
     displayName: 'Development branch (net6, build, test, code-coverage, code-analysis)'
     timeoutInMinutes: 120
-    strategy:
-      matrix:
-        Linux_Build_and_Test:
-          imageName: 'ubuntu-20.04'
-        Windows_Build_Test_and_Package:
-          imageName: 'windows-2019'
+    # strategy:
+    #   matrix:
+    #     Linux_Build_and_Test:
+    #       imageName: 'ubuntu-20.04'
+    #     Windows_Build_Test_and_Package:
+    #       imageName: 'windows-2022'
     pool:
-      vmImage: $(imageName)
+    #  vmImage: $(imageName)
+      vmImage: 'windows-2022'
     variables:
       - name: DotnetBuildName
         value: 'net6.0'
@@ -34,7 +35,7 @@
     displayName: 'Store NuGet Packages for Preview'
     timeoutInMinutes: 30
     pool:
-      vmImage: 'windows-2019'
+      vmImage: 'windows-2022'
     variables:
       - name: ArtifactPackageName
         value: 'Preview'
