--- a/.azure/jobs/deployment-development.yml
+++ b/.azure/jobs/deployment-development.yml
@@ -2,8 +2,8 @@
   - deployment: 'CD'
     displayName: 'Preview: release to private NuGet Feed'
     environment: 'Development'
-    pool:
-      vmImage: 'ubuntu-20.04'
+    pool: 'ubuntu-20.04'
+      # vmImage: 'ubuntu-20.04'
     strategy:
       runOnce:
         deploy:
