https://devblogs.microsoft.com/devops/change-in-azure-pipelines-grant-for-public-projects/

--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -33,8 +33,8 @@
     - BuildDotNet6_0
     displayName: 'Store NuGet Packages for Preview'
     timeoutInMinutes: 30
-    pool:
-      vmImage: 'windows-2019'
+    pool: 'windows-2019'
+      # vmImage: 'windows-2019'
     variables:
       - name: ArtifactPackageName
         value: 'Preview'
