https://devblogs.microsoft.com/devops/change-in-azure-pipelines-grant-for-public-projects/

--- a/.azure/jobs/finalization.yml
+++ b/.azure/jobs/finalization.yml
@@ -2,8 +2,8 @@
   - job: 'Finalizer'
     displayName: 'Update BUILD_NUMBER (finalizer)'
     timeoutInMinutes: 15
-    pool:
-      vmImage: 'ubuntu-20.04'
+    pool: 'ubuntu-20.04'
+      # vmImage: 'ubuntu-20.04'
     steps:
       - template: ../steps/dotnet.yml
       - template: ../steps/install-minvertool.yml
