--- a/src/Savvyio.Extensions.Storage.InMemory/Savvyio.Extensions.Storage.InMemory.csproj
+++ b/src/Savvyio.Extensions.Storage.InMemory/Savvyio.Extensions.Storage.InMemory.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <RootNamespace>Savvyio</RootNamespace>
+    <RootNamespace>Savvyio.Extensions</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
