Support for both Self-hosted and Microsoft-hosted VMs.

--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -5,11 +5,14 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: 'ubuntu-20.04'
+          imageName: $(PIPELINES_LINUX_VM_IMAGE)
         Windows_Build_Test_and_Package:
-          imageName: 'windows-2019'
-    pool: $(imageName)
-      # vmImage: $(imageName)
+          imageName: $(PIPELINES_WINDOWS_VM_IMAGE)
+    pool:
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
+        name: $(imageName)
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
+        vmImage: $(imageName)
     variables:
       - name: DotnetBuildName
         value: 'net6.0'
@@ -33,8 +36,11 @@
     - BuildDotNet6_0
     displayName: 'Store NuGet Packages for Preview'
     timeoutInMinutes: 30
-    pool: 'windows-2019'
-      # vmImage: 'windows-2019'
+    pool:
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
+        name: $(PIPELINES_WINDOWS_VM_IMAGE)
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
+        vmImage: $(PIPELINES_WINDOWS_VM_IMAGE)
     variables:
       - name: ArtifactPackageName
         value: 'Preview'
