--- a/.azure/jobs/build-production.yml
+++ b/.azure/jobs/build-production.yml
@@ -3,7 +3,10 @@
     displayName: 'Master branch (net6.0, build)'
     timeoutInMinutes: 60
     pool:
-      vmImage: 'windows-2019'
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
+        name: $(PIPELINES_WINDOWS_VM_IMAGE)
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
+        vmImage: $(PIPELINES_WINDOWS_VM_IMAGE)
     variables:
       - name: DotnetBuildName
         value: 'net6.0'
@@ -23,7 +26,10 @@
     displayName: 'Store NuGet Packages for Production'
     timeoutInMinutes: 30
     pool:
-      vmImage: 'windows-2019'
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
+        name: $(PIPELINES_WINDOWS_VM_IMAGE)
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
+        vmImage: $(PIPELINES_WINDOWS_VM_IMAGE)
     variables:
       - name: ArtifactPackageName
         value: 'Production'
