--- a/.azure/jobs/build-pullrequest.yml
+++ b/.azure/jobs/build-pullrequest.yml
@@ -5,11 +5,14 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: 'ubuntu-20.04'
+          imageName: $(PIPELINES_LINUX_VM_IMAGE)
         Windows_Build_and_Test:
-          imageName: 'windows-2019'
+          imageName: $(PIPELINES_WINDOWS_VM_IMAGE)
     pool:
-      vmImage: $(imageName)
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
+        name: $(imageName)
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
+        vmImage: $(imageName)
     variables:
       - name: DotnetBuildName
         value: 'net6.0'
