--- a/.azure/jobs/build-staging.yml
+++ b/.azure/jobs/build-staging.yml
@@ -5,11 +5,14 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: 'ubuntu-20.04'
+          imageName: $(PIPELINES_LINUX_VM_IMAGE)
         Windows_Build_Test_and_Package:
-          imageName: 'windows-2019'
+          imageName: $(PIPELINES_WINDOWS_VM_IMAGE)
     pool:
-      vmImage: $(imageName)
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
+        name: $(imageName)
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
+        vmImage: $(imageName)
     variables:
       - name: DotnetBuildName
         value: 'net6.0'
@@ -31,7 +34,10 @@
     displayName: 'Store NuGet Packages for RC'
     timeoutInMinutes: 30
     pool:
-      vmImage: 'windows-2019'
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
+        name: $(PIPELINES_WINDOWS_VM_IMAGE)
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
+        vmImage: $(PIPELINES_WINDOWS_VM_IMAGE)
     variables:
       - name: ArtifactPackageName
         value: 'ReleaseCandidate'
