--- a/.azure/jobs/deployment-development.yml
+++ b/.azure/jobs/deployment-development.yml
@@ -2,8 +2,11 @@
   - deployment: 'CD'
     displayName: 'Preview: release to private NuGet Feed'
     environment: 'Development'
-    pool: 'ubuntu-20.04'
-      # vmImage: 'ubuntu-20.04'
+    pool:
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
+        name: $(PIPELINES_LINUX_VM_IMAGE)
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
+        vmImage: $(PIPELINES_LINUX_VM_IMAGE)
     strategy:
       runOnce:
         deploy:
