--- a/.azure/jobs/deployment-production.yml
+++ b/.azure/jobs/deployment-production.yml
@@ -3,7 +3,10 @@
     displayName: 'Release to public NuGet Feed'
     environment: 'Production'
     pool:
-      vmImage: 'ubuntu-20.04'
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
+        name: $(PIPELINES_LINUX_VM_IMAGE)
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
+        vmImage: $(PIPELINES_LINUX_VM_IMAGE)
     strategy:
       runOnce:
         deploy:
