--- a/.azure/jobs/finalization.yml
+++ b/.azure/jobs/finalization.yml
@@ -2,8 +2,11 @@
   - job: 'Finalizer'
     displayName: 'Update BUILD_NUMBER (finalizer)'
     timeoutInMinutes: 15
-    pool: 'ubuntu-20.04'
-      # vmImage: 'ubuntu-20.04'
+    pool:
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
+        name: $(PIPELINES_LINUX_VM_IMAGE)
+      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
+        vmImage: $(PIPELINES_LINUX_VM_IMAGE)
     steps:
       - template: ../steps/dotnet.yml
       - template: ../steps/install-minvertool.yml
