--- a/.azure/pipelines.yml
+++ b/.azure/pipelines.yml
@@ -17,6 +17,12 @@ variables:
     value: true
   - name: DOTNET_CLI_TELEMETRY_OPTOUT
     value: 1
+  - name: PIPELINES_SELF_HOSTED
+    value: false
+  - name: PIPELINES_WINDOWS_VM_IMAGE
+    value: windows-2022
+  - name: PIPELINES_LINUX_VM_IMAGE
+    value: ubuntu-20.04
 
 stages:
   - ${{ if endsWith(variables['build.sourceBranch'], 'development') }}:
