Changed to include pling for string.

--- a/.azure/pipelines.yml
+++ b/.azure/pipelines.yml
@@ -20,9 +20,9 @@ variables:
   - name: PIPELINES_SELF_HOSTED
     value: false
   - name: PIPELINES_WINDOWS_VM_IMAGE
-    value: windows-2022
+    value: 'windows-2019'
   - name: PIPELINES_LINUX_VM_IMAGE
-    value: ubuntu-20.04
+    value: 'ubuntu-20.04'
 
 stages:
   - ${{ if endsWith(variables['build.sourceBranch'], 'development') }}:
