--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -5,9 +5,9 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: $(PIPELINES_LINUX_VM_IMAGE)
+          imageName: $(variables.PIPELINES_LINUX_VM_IMAGE)
         Windows_Build_Test_and_Package:
-          imageName: $(PIPELINES_WINDOWS_VM_IMAGE)
+          imageName: $(variables.PIPELINES_WINDOWS_VM_IMAGE)
     pool:
       ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
         name: $(imageName)
