--- a/.azure/jobs/deployment-development.yml
+++ b/.azure/jobs/deployment-development.yml
@@ -4,9 +4,9 @@
     environment: 'Development'
     pool:
       ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
-        name: $(PIPELINES_LINUX_VM_IMAGE)
+        name: $(variables.PIPELINES_LINUX_VM_IMAGE)
       ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
-        vmImage: $(PIPELINES_LINUX_VM_IMAGE)
+        vmImage: $(variables.PIPELINES_LINUX_VM_IMAGE)
     strategy:
       runOnce:
         deploy:
