--- a/.azure/jobs/deployment-development.yml
+++ b/.azure/jobs/deployment-development.yml
@@ -3,10 +3,10 @@
     displayName: 'Preview: release to private NuGet Feed'
     environment: 'Development'
     pool:
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
-        name: $(variables.PIPELINES_LINUX_VM_IMAGE)
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
-        vmImage: $(variables.PIPELINES_LINUX_VM_IMAGE)
+      ${{ if eq(variables.PipelinesSelfHosted, 'true') }}:
+        name: $(PipelinesLinuxVmImage)
+      ${{ if eq(variables.PipelinesSelfHosted, 'false') }}:
+        vmImage: $(PipelinesLinuxVmImage)
     strategy:
       runOnce:
         deploy:
