--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -5,13 +5,13 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: $(variables.PIPELINES_LINUX_VM_IMAGE)
+          imageName: $(PipelinesLinuxVmImage)
         Windows_Build_Test_and_Package:
-          imageName: $(variables.PIPELINES_WINDOWS_VM_IMAGE)
+          imageName: $(PipelinesWindowsVmImage)
     pool:
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
+      ${{ if eq(variables.PipelinesSelfHosted, 'true') }}:
         name: $(imageName)
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
+      ${{ if eq(variables.PipelinesSelfHosted, 'false') }}:
         vmImage: $(imageName)
     variables:
       - name: DotnetBuildName
@@ -38,9 +38,9 @@
     timeoutInMinutes: 30
     pool:
       ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
-        name: $(PIPELINES_WINDOWS_VM_IMAGE)
+        name: $(PipelinesWindowsVmImage)
       ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
-        vmImage: $(PIPELINES_WINDOWS_VM_IMAGE)
+        vmImage: $(PipelinesWindowsVmImage)
     variables:
       - name: ArtifactPackageName
         value: 'Preview'
