--- a/.azure/jobs/finalization.yml
+++ b/.azure/jobs/finalization.yml
@@ -3,10 +3,10 @@
     displayName: 'Update BUILD_NUMBER (finalizer)'
     timeoutInMinutes: 15
     pool:
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
-        name: $(variables.PIPELINES_LINUX_VM_IMAGE)
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
-        vmImage: $(variables.PIPELINES_LINUX_VM_IMAGE)
+      ${{ if eq(variables.PipelinesSelfHosted, 'true') }}:
+        name: $(PipelinesLinuxVmImage)
+      ${{ if eq(variables.PipelinesSelfHosted, 'false') }}:
+        vmImage: $(PipelinesLinuxVmImage)
     steps:
       - template: ../steps/dotnet.yml
       - template: ../steps/install-minvertool.yml
