--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -1,18 +1,45 @@
 ﻿jobs:
   - job: BuildDotNet6_0
+    condition: eq(variables.PIPELINES_SELF_HOSTED, false)
     displayName: 'Development branch (net6, build, test, code-coverage, code-analysis)'
     timeoutInMinutes: 120
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: $(PipelinesLinuxVmImage)
+          imageName: $(PIPELINES_LINUX_VM_IMAGE)
         Windows_Build_Test_and_Package:
-          imageName: $(PipelinesWindowsVmImage)
+          imageName: $(PIPELINES_WINDOWS_VM_IMAGE)
     pool:
-      ${{ if eq(variables.PipelinesSelfHosted, 'true') }}:
-        name: $(imageName)
-      ${{ if eq(variables.PipelinesSelfHosted, 'false') }}:
-        vmImage: $(imageName)
+      name: $(imageName)
+    variables:
+      - name: DotnetBuildName
+        value: 'net6.0'
+    steps:
+    - template: ../steps/dotnet.yml
+    - template: ../steps/install-minvertool.yml
+    - template: ../steps/install-reportgenerator.yml
+    - template: ../steps/download-snk.yml
+    - template: ../steps/minverversion-override.yml
+    - template: ../steps/restore.yml
+    - template: ../steps/sonarcloud-prepare.yml
+    - template: ../steps/build-net6_0.yml
+    - template: ../steps/unit-test.yml
+    - template: ../steps/codecov.yml
+    - template: ../steps/sonarcloud-finalize.yml
+    - template: ../steps/publish-artifact.yml
+
+  - job: BuildDotNet6_0_SelfHosted
+    condition: eq(variables.PIPELINES_SELF_HOSTED, true)
+    displayName: 'Development branch (net6, build, test, code-coverage, code-analysis, self-hosted)'
+    timeoutInMinutes: 120
+    strategy:
+      matrix:
+        Linux_Build_and_Test:
+          imageName: $(PIPELINES_LINUX_VM_IMAGE)
+        Windows_Build_Test_and_Package:
+          imageName: $(PIPELINES_WINDOWS_VM_IMAGE)
+    pool:
+      vmImage: $(imageName)
     variables:
       - name: DotnetBuildName
         value: 'net6.0'
@@ -31,16 +58,33 @@
     - template: ../steps/publish-artifact.yml
 
   - job: PublishBuildArtifacts
-    condition: succeeded()
+    condition: and(succeeded(), eq(variables.PIPELINES_SELF_HOSTED, false))
     dependsOn:
     - BuildDotNet6_0
     displayName: 'Store NuGet Packages for Preview'
     timeoutInMinutes: 30
     pool:
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
-        name: $(PipelinesWindowsVmImage)
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
-        vmImage: $(PipelinesWindowsVmImage)
+      vmImage: $(PIPELINES_WINDOWS_VM_IMAGE)
+    variables:
+      - name: ArtifactPackageName
+        value: 'Preview'
+    steps:
+    - template: ../steps/dotnet.yml
+    - template: ../steps/install-minvertool.yml
+    - template: ../steps/minverversion-override.yml
+    - template: ../steps/publish-nuget.yml
+      parameters:
+        artifactPackages:
+          - "net6.0"
+
+  - job: PublishBuildArtifacts_SelfHosted
+    condition: and(succeeded(), eq(variables.PIPELINES_SELF_HOSTED, true))
+    dependsOn:
+    - BuildDotNet6_0_SelfHosted
+    displayName: 'Store NuGet Packages for Preview'
+    timeoutInMinutes: 30
+    pool:
+      name: $(PIPELINES_WINDOWS_VM_IMAGE)
     variables:
       - name: ArtifactPackageName
         value: 'Preview'
