--- a/.azure/jobs/finalization.yml
+++ b/.azure/jobs/finalization.yml
@@ -1,12 +1,22 @@
 ﻿jobs:
-  - job: 'Finalizer'
+  - job: Finalizer
+    condition: eq(variables.PIPELINES_SELF_HOSTED, false)
     displayName: 'Update BUILD_NUMBER (finalizer)'
     timeoutInMinutes: 15
     pool:
-      ${{ if eq(variables.PipelinesSelfHosted, 'true') }}:
-        name: $(PipelinesLinuxVmImage)
-      ${{ if eq(variables.PipelinesSelfHosted, 'false') }}:
-        vmImage: $(PipelinesLinuxVmImage)
+      vmImage: $(PIPELINES_LINUX_VM_IMAGE)
+    steps:
+      - template: ../steps/dotnet.yml
+      - template: ../steps/install-minvertool.yml
+      - template: ../steps/minverversion-override.yml
+      - template: ../steps/update-buildnumber.yml
+
+  - job: Finalizer_SelfHosted
+    condition: eq(variables.PIPELINES_SELF_HOSTED, true)
+    displayName: 'Update BUILD_NUMBER (finalizer)'
+    timeoutInMinutes: 15
+    pool:
+      name: $(PIPELINES_LINUX_VM_IMAGE)
     steps:
       - template: ../steps/dotnet.yml
       - template: ../steps/install-minvertool.yml
