--- a/.azure/jobs/deployment-development.yml
+++ b/.azure/jobs/deployment-development.yml
@@ -1,12 +1,37 @@
 ﻿jobs:
-  - deployment: 'CD'
+  - deployment: CD
+    condition: eq(variables.PIPELINES_SELF_HOSTED, false)
     displayName: 'Preview: release to private NuGet Feed'
     environment: 'Development'
     pool:
-      ${{ if eq(variables.PipelinesSelfHosted, 'true') }}:
-        name: $(PipelinesLinuxVmImage)
-      ${{ if eq(variables.PipelinesSelfHosted, 'false') }}:
-        vmImage: $(PipelinesLinuxVmImage)
+      vmImage: $(PIPELINES_LINUX_VM_IMAGE)
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+            - task: DownloadBuildArtifacts@0
+              displayName: 'Download the build artifacts'
+              inputs:
+                buildType: 'current'
+                downloadType: 'single'
+                artifactName: 'Preview'
+                downloadPath: '$(System.DefaultWorkingDirectory)'
+
+            - task: NuGetCommand@2
+              displayName: 'Publish NuGet Packages to https://nuget.codebelt.net/v3/index.json'
+              inputs:
+                command: push
+                packagesToPush: '$(System.DefaultWorkingDirectory)/**/*.nupkg;$(System.DefaultWorkingDirectory)/**/*.snupkg'
+                nuGetFeedType: external
+                publishFeedCredentials: 'Codebelt-Nuget'
+
+
+  - deployment: CD_SelfHosted
+    condition: eq(variables.PIPELINES_SELF_HOSTED, true)
+    displayName: 'Preview: release to private NuGet Feed'
+    environment: 'Development'
+    pool:
+      name: $(PIPELINES_LINUX_VM_IMAGE)
     strategy:
       runOnce:
         deploy:
