--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -1,6 +1,6 @@
 ﻿jobs:
   - job: BuildDotNet6_0
-    condition: eq(variables.PIPELINES_SELF_HOSTED, false)
+    condition: eq(variables.PIPELINES_SELF_HOSTED, 'false')
     displayName: 'Development branch (net6, build, test, code-coverage, code-analysis)'
     timeoutInMinutes: 120
     strategy:
@@ -29,7 +29,7 @@
     - template: ../steps/publish-artifact.yml
 
   - job: BuildDotNet6_0_SelfHosted
-    condition: eq(variables.PIPELINES_SELF_HOSTED, true)
+    condition: eq(variables.PIPELINES_SELF_HOSTED, 'true')
     displayName: 'Development branch (net6, build, test, code-coverage, code-analysis, self-hosted)'
     timeoutInMinutes: 120
     strategy:
