--- a/.azure/jobs/deployment-development.yml
+++ b/.azure/jobs/deployment-development.yml
@@ -1,6 +1,6 @@
 ﻿jobs:
   - deployment: CD
-    condition: eq(variables.PIPELINES_SELF_HOSTED, false)
+    condition: eq(variables.PIPELINES_SELF_HOSTED, 'false')
     displayName: 'Preview: release to private NuGet Feed'
     environment: 'Development'
     pool:
@@ -27,7 +27,7 @@
 
 
   - deployment: CD_SelfHosted
-    condition: eq(variables.PIPELINES_SELF_HOSTED, true)
+    condition: eq(variables.PIPELINES_SELF_HOSTED, 'true')
     displayName: 'Preview: release to private NuGet Feed'
     environment: 'Development'
     pool:
