--- a/.azure/jobs/finalization.yml
+++ b/.azure/jobs/finalization.yml
@@ -1,6 +1,6 @@
 ﻿jobs:
   - job: Finalizer
-    condition: eq(variables.PIPELINES_SELF_HOSTED, false)
+    condition: eq(variables.PIPELINES_SELF_HOSTED, 'false')
     displayName: 'Update BUILD_NUMBER (finalizer)'
     timeoutInMinutes: 15
     pool:
@@ -12,7 +12,7 @@
       - template: ../steps/update-buildnumber.yml
 
   - job: Finalizer_SelfHosted
-    condition: eq(variables.PIPELINES_SELF_HOSTED, true)
+    condition: eq(variables.PIPELINES_SELF_HOSTED, 'true')
     displayName: 'Update BUILD_NUMBER (finalizer)'
     timeoutInMinutes: 15
     pool:
