--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -10,7 +10,7 @@
         Windows_Build_Test_and_Package:
           imageName: $(PIPELINES_WINDOWS_VM_IMAGE)
     pool:
-      name: $(imageName)
+      vmImage: $(imageName)
     variables:
       - name: DotnetBuildName
         value: 'net6.0'
@@ -39,7 +39,7 @@
         Windows_Build_Test_and_Package:
           imageName: $(PIPELINES_WINDOWS_VM_IMAGE)
     pool:
-      vmImage: $(imageName)
+      name: $(imageName)
     variables:
       - name: DotnetBuildName
         value: 'net6.0'
@@ -58,7 +58,7 @@
     - template: ../steps/publish-artifact.yml
 
   - job: PublishBuildArtifacts
-    condition: and(succeeded(), eq(variables.PIPELINES_SELF_HOSTED, false))
+    condition: and(succeeded(), eq(variables.PIPELINES_SELF_HOSTED, 'false'))
     dependsOn:
     - BuildDotNet6_0
     displayName: 'Store NuGet Packages for Preview'
@@ -78,7 +78,7 @@
           - "net6.0"
 
   - job: PublishBuildArtifacts_SelfHosted
-    condition: and(succeeded(), eq(variables.PIPELINES_SELF_HOSTED, true))
+    condition: and(succeeded(), eq(variables.PIPELINES_SELF_HOSTED, 'true'))
     dependsOn:
     - BuildDotNet6_0_SelfHosted
     displayName: 'Store NuGet Packages for Preview'
