--- a/.azure/jobs/deployment-development.yml
+++ b/.azure/jobs/deployment-development.yml
@@ -28,7 +28,7 @@
 
   - deployment: CD_SelfHosted
     condition: eq(variables.PIPELINES_SELF_HOSTED, 'true')
-    displayName: 'Preview: release to private NuGet Feed'
+    displayName: 'Preview: release to private NuGet Feed (self-hosted)'
     environment: 'Development'
     pool:
       name: $(PIPELINES_LINUX_VM_IMAGE)
