--- a/.azure/jobs/finalization.yml
+++ b/.azure/jobs/finalization.yml
@@ -13,7 +13,7 @@
 
   - job: Finalizer_SelfHosted
     condition: eq(variables.PIPELINES_SELF_HOSTED, 'true')
-    displayName: 'Update BUILD_NUMBER (finalizer)'
+    displayName: 'Update BUILD_NUMBER (finalizer, self-hosted)'
     timeoutInMinutes: 15
     pool:
       name: $(PIPELINES_LINUX_VM_IMAGE)
