--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -6,9 +6,9 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: $(PIPELINES_LINUX_VM_IMAGE)
+          imageName: '$(PIPELINES_LINUX_VM_IMAGE)'
         Windows_Build_Test_and_Package:
-          imageName: $(PIPELINES_WINDOWS_VM_IMAGE)
+          imageName: '$(PIPELINES_WINDOWS_VM_IMAGE)'
     pool:
       vmImage: $(imageName)
     variables:
@@ -35,9 +35,9 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: $(PIPELINES_LINUX_VM_IMAGE)
+          imageName: '$(PIPELINES_LINUX_VM_IMAGE)'
         Windows_Build_Test_and_Package:
-          imageName: $(PIPELINES_WINDOWS_VM_IMAGE)
+          imageName: '$(PIPELINES_WINDOWS_VM_IMAGE)'
     pool:
       name: $(imageName)
     variables:
