--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -6,9 +6,9 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: '$(PIPELINES_LINUX_VM_IMAGE)'
+          imageName: $(variables.PIPELINES_LINUX_VM_IMAGE)
         Windows_Build_Test_and_Package:
-          imageName: '$(PIPELINES_WINDOWS_VM_IMAGE)'
+          imageName: $(variables.PIPELINES_WINDOWS_VM_IMAGE)
     pool:
       vmImage: $(imageName)
     variables:
@@ -35,9 +35,9 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: '$(PIPELINES_LINUX_VM_IMAGE)'
+          imageName: $(variables.PIPELINES_LINUX_VM_IMAGE)
         Windows_Build_Test_and_Package:
-          imageName: '$(PIPELINES_WINDOWS_VM_IMAGE)'
+          imageName: $(variables.PIPELINES_WINDOWS_VM_IMAGE)
     pool:
       name: $(imageName)
     variables:
@@ -84,7 +84,7 @@
     displayName: 'Store NuGet Packages for Preview'
     timeoutInMinutes: 30
     pool:
-      name: $(PIPELINES_WINDOWS_VM_IMAGE)
+      name: $(variables.PIPELINES_WINDOWS_VM_IMAGE)
     variables:
       - name: ArtifactPackageName
         value: 'Preview'
