--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -6,15 +6,18 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: ${{ variables.PIPELINES_LINUX_VM_IMAGE }}
+          imageName: ${{ PIPELINES_LINUX_VM_IMAGE }}
         Windows_Build_Test_and_Package:
-          imageName: ${{ variables.PIPELINES_WINDOWS_VM_IMAGE }}
+          imageName: ${{ PIPELINES_WINDOWS_VM_IMAGE }}
     pool:
       vmImage: $(imageName)
     variables:
       - name: DotnetBuildName
         value: 'net6.0'
     steps:
+    - bash: |
+        echo "##[debug] Linux: $(PIPELINES_LINUX_VM_IMAGE)"
+        echo "##[debug] Windows: $(PIPELINES_WINDOWS_VM_IMAGE)"
     - template: ../steps/dotnet.yml
     - template: ../steps/install-minvertool.yml
     - template: ../steps/install-reportgenerator.yml
@@ -35,9 +38,9 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: ${{ variables.PIPELINES_LINUX_VM_IMAGE }}
+          imageName: ${{ PIPELINES_LINUX_VM_IMAGE }}
         Windows_Build_Test_and_Package:
-          imageName: ${{ variables.PIPELINES_WINDOWS_VM_IMAGE }}
+          imageName: ${{ PIPELINES_WINDOWS_VM_IMAGE }}
     pool:
       name: $(imageName)
     variables:
