Pipeline fun take 100

--- a/.azure/stages/development.yml
+++ b/.azure/stages/development.yml
@@ -8,6 +8,12 @@
         value: 'src'
       - name: BuildConfiguration
         value: 'Debug'
+      - name: SelfHosted
+        value: false
+      - name: LinuxVmImage
+        value: 'ubuntu-20.04'
+      - name: WindowsVmImage
+        value: 'windows-2019'
     jobs:
     - template: ../jobs/build-development.yml
 
