--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -1,23 +1,20 @@
 ﻿jobs:
   - job: BuildDotNet6_0
-    condition: eq(variables.PIPELINES_SELF_HOSTED, 'false')
+    condition: eq(variables.SelfHosted, 'false')
     displayName: 'Development branch (net6, build, test, code-coverage, code-analysis)'
     timeoutInMinutes: 120
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: ${{ variables.PIPELINES_LINUX_VM_IMAGE }}
+          imageName: $(LinuxVmImage)
         Windows_Build_Test_and_Package:
-          imageName: ${{ variables.PIPELINES_WINDOWS_VM_IMAGE }}
+          imageName: $(WindowsVmImage)
     pool:
       vmImage: $(imageName)
     variables:
       - name: DotnetBuildName
         value: 'net6.0'
     steps:
-    - bash: |
-        echo "##[debug] Linux: $(PIPELINES_LINUX_VM_IMAGE)"
-        echo "##[debug] Windows: $(PIPELINES_WINDOWS_VM_IMAGE)"
     - template: ../steps/dotnet.yml
     - template: ../steps/install-minvertool.yml
     - template: ../steps/install-reportgenerator.yml
@@ -32,15 +29,15 @@
     - template: ../steps/publish-artifact.yml
 
   - job: BuildDotNet6_0_SelfHosted
-    condition: eq(variables.PIPELINES_SELF_HOSTED, 'true')
+    condition: eq(variables.SelfHosted, 'true')
     displayName: 'Development branch (net6, build, test, code-coverage, code-analysis, self-hosted)'
     timeoutInMinutes: 120
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: ${{ variables.PIPELINES_LINUX_VM_IMAGE }}
+          imageName: $(LinuxVmImage)
         Windows_Build_Test_and_Package:
-          imageName: ${{ variables.PIPELINES_WINDOWS_VM_IMAGE }}
+          imageName: $(WindowsVmImage)
     pool:
       name: $(imageName)
     variables:
@@ -61,13 +58,13 @@
     - template: ../steps/publish-artifact.yml
 
   - job: PublishBuildArtifacts
-    condition: and(succeeded(), eq(variables.PIPELINES_SELF_HOSTED, 'false'))
+    condition: and(succeeded(), eq(variables.SelfHosted, 'false'))
     dependsOn:
     - BuildDotNet6_0
     displayName: 'Store NuGet Packages for Preview'
     timeoutInMinutes: 30
     pool:
-      vmImage: $(PIPELINES_WINDOWS_VM_IMAGE)
+      vmImage: $(WindowsVmImage)
     variables:
       - name: ArtifactPackageName
         value: 'Preview'
@@ -81,13 +78,13 @@
           - "net6.0"
 
   - job: PublishBuildArtifacts_SelfHosted
-    condition: and(succeeded(), eq(variables.PIPELINES_SELF_HOSTED, 'true'))
+    condition: and(succeeded(), eq(variables.SelfHosted, 'true'))
     dependsOn:
     - BuildDotNet6_0_SelfHosted
     displayName: 'Store NuGet Packages for Preview'
     timeoutInMinutes: 30
     pool:
-      name: $(variables.PIPELINES_WINDOWS_VM_IMAGE)
+      name: $(WindowsVmImage)
     variables:
       - name: ArtifactPackageName
         value: 'Preview'
