--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -6,9 +6,9 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: $(variables.LinuxVmImage)
+          imageName: ${{ variables.LinuxVmImage }}
         Windows_Build_Test_and_Package:
-          imageName: $(variables.WindowsVmImage)
+          imageName: ${{ variables.WindowsVmImage }}
     pool:
       vmImage: $(imageName)
     variables:
@@ -35,9 +35,9 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: $(variables.LinuxVmImage)
+          imageName: ${{ variables.LinuxVmImage }}
         Windows_Build_Test_and_Package:
-          imageName: $(variables.WindowsVmImage)
+          imageName: ${{ variables.WindowsVmImage }}
     pool:
       name: $(imageName)
     variables:
