--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -1,14 +1,14 @@
 ﻿jobs:
   - job: BuildDotNet6_0
-    condition: eq(variables.SelfHosted, 'false')
+    condition: eq(parameters.SelfHosted, 'false')
     displayName: 'Development branch (net6, build, test, code-coverage, code-analysis)'
     timeoutInMinutes: 120
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: ${{ variables.LinuxVmImage }}
+          imageName: ${{ parameters.LinuxVmImage }}
         Windows_Build_Test_and_Package:
-          imageName: ${{ variables.WindowsVmImage }}
+          imageName: ${{ parameters.WindowsVmImage }}
     pool:
       vmImage: $(imageName)
     variables:
@@ -29,15 +29,15 @@
     - template: ../steps/publish-artifact.yml
 
   - job: BuildDotNet6_0_SelfHosted
-    condition: eq(variables.SelfHosted, 'true')
+    condition: eq(parameters.SelfHosted, 'true')
     displayName: 'Development branch (net6, build, test, code-coverage, code-analysis, self-hosted)'
     timeoutInMinutes: 120
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: ${{ variables.LinuxVmImage }}
+          imageName: ${{ parameters.LinuxVmImage }}
         Windows_Build_Test_and_Package:
-          imageName: ${{ variables.WindowsVmImage }}
+          imageName: ${{ parameters.WindowsVmImage }}
     pool:
       name: $(imageName)
     variables:
@@ -58,13 +58,13 @@
     - template: ../steps/publish-artifact.yml
 
   - job: PublishBuildArtifacts
-    condition: and(succeeded(), eq(variables.SelfHosted, 'false'))
+    condition: and(succeeded(), eq(parameters.SelfHosted, 'false'))
     dependsOn:
     - BuildDotNet6_0
     displayName: 'Store NuGet Packages for Preview'
     timeoutInMinutes: 30
     pool:
-      vmImage: $(WindowsVmImage)
+      vmImage: ${{ parameters.WindowsVmImage }}
     variables:
       - name: ArtifactPackageName
         value: 'Preview'
@@ -78,13 +78,13 @@
           - "net6.0"
 
   - job: PublishBuildArtifacts_SelfHosted
-    condition: and(succeeded(), eq(variables.SelfHosted, 'true'))
+    condition: and(succeeded(), eq(parameters.SelfHosted, 'true'))
     dependsOn:
     - BuildDotNet6_0_SelfHosted
     displayName: 'Store NuGet Packages for Preview'
     timeoutInMinutes: 30
     pool:
-      name: $(WindowsVmImage)
+      name: ${{ parameters.WindowsVmImage }}
     variables:
       - name: ArtifactPackageName
         value: 'Preview'
