--- a/.azure/stages/development.yml
+++ b/.azure/stages/development.yml
@@ -2,18 +2,19 @@
   - stage: BuildDevelopment
     displayName: 'Build for development branch'
     condition: and(succeeded(), endsWith(variables['build.sourceBranch'], 'development'))
-    variables:
-      - group: BuildSecrets
-      - name: BuildSource
-        value: 'src'
-      - name: BuildConfiguration
-        value: 'Debug'
+    parameters:
       - name: SelfHosted
         value: false
       - name: LinuxVmImage
         value: 'ubuntu-20.04'
       - name: WindowsVmImage
         value: 'windows-2019'
+    variables:
+      - group: BuildSecrets
+      - name: BuildSource
+        value: 'src'
+      - name: BuildConfiguration
+        value: 'Debug'
     jobs:
     - template: ../jobs/build-development.yml
 
