More pipeline "fun" .. :-/

--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -1,14 +1,17 @@
-﻿jobs:
+﻿variables:
+- template: ../variables.yml
+
+jobs:
   - job: BuildDotNet6_0
-    condition: eq(parameters.SelfHosted, 'false')
+    condition: eq(variables.PIPELINES_SELF_HOSTED, 'false')
     displayName: 'Development branch (net6, build, test, code-coverage, code-analysis)'
     timeoutInMinutes: 120
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: ${{ parameters.LinuxVmImage }}
+          imageName: ${{ variables.PIPELINES_LINUX_VM_IMAGE }}
         Windows_Build_Test_and_Package:
-          imageName: ${{ parameters.WindowsVmImage }}
+          imageName: ${{ variables.PIPELINES_WINDOWS_VM_IMAGE }}
     pool:
       vmImage: $(imageName)
     variables:
@@ -29,15 +32,15 @@
     - template: ../steps/publish-artifact.yml
 
   - job: BuildDotNet6_0_SelfHosted
-    condition: eq(parameters.SelfHosted, 'true')
+    condition: eq(variables.PIPELINES_SELF_HOSTED, 'true')
     displayName: 'Development branch (net6, build, test, code-coverage, code-analysis, self-hosted)'
     timeoutInMinutes: 120
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: ${{ parameters.LinuxVmImage }}
+          imageName: ${{ variables.PIPELINES_LINUX_VM_IMAGE }}
         Windows_Build_Test_and_Package:
-          imageName: ${{ parameters.WindowsVmImage }}
+          imageName: ${{ variables.PIPELINES_WINDOWS_VM_IMAGE }}
     pool:
       name: $(imageName)
     variables:
@@ -58,13 +61,13 @@
     - template: ../steps/publish-artifact.yml
 
   - job: PublishBuildArtifacts
-    condition: and(succeeded(), eq(parameters.SelfHosted, 'false'))
+    condition: and(succeeded(), eq(variables.PIPELINES_SELF_HOSTED, 'false'))
     dependsOn:
     - BuildDotNet6_0
     displayName: 'Store NuGet Packages for Preview'
     timeoutInMinutes: 30
     pool:
-      vmImage: ${{ parameters.WindowsVmImage }}
+      vmImage: ${{ variables.PIPELINES_WINDOWS_VM_IMAGE }}
     variables:
       - name: ArtifactPackageName
         value: 'Preview'
@@ -78,13 +81,13 @@
           - "net6.0"
 
   - job: PublishBuildArtifacts_SelfHosted
-    condition: and(succeeded(), eq(parameters.SelfHosted, 'true'))
+    condition: and(succeeded(), eq(variables.PIPELINES_SELF_HOSTED, 'true'))
     dependsOn:
     - BuildDotNet6_0_SelfHosted
     displayName: 'Store NuGet Packages for Preview'
     timeoutInMinutes: 30
     pool:
-      name: ${{ parameters.WindowsVmImage }}
+      name: ${{ variables.PIPELINES_WINDOWS_VM_IMAGE }}
     variables:
       - name: ArtifactPackageName
         value: 'Preview'
