--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -1,7 +1,4 @@
-﻿variables:
-- template: ../variables.yml
-
-jobs:
+﻿jobs:
   - job: BuildDotNet6_0
     condition: eq(variables.PIPELINES_SELF_HOSTED, 'false')
     displayName: 'Development branch (net6, build, test, code-coverage, code-analysis)'
