--- a/.azure/stages/development.yml
+++ b/.azure/stages/development.yml
@@ -8,6 +8,7 @@
         value: 'src'
       - name: BuildConfiguration
         value: 'Debug'
+      - template: ../variables.yml
     jobs:
     - template: ../jobs/build-development.yml
 
