--- a/.azure/stages/development.yml
+++ b/.azure/stages/development.yml
@@ -8,9 +8,10 @@
         value: 'src'
       - name: BuildConfiguration
         value: 'Debug'
-      - template: ../variables.yml
     jobs:
     - template: ../jobs/build-development.yml
+      variables:
+      - template: ../variables.yml
 
   - stage: UpdateBuildNumber
     displayName: 'Updating BUILD_BUILDNUMBER for development branch'
