--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -1,5 +1,17 @@
 ﻿parameters:
-  - template: ../parameters.yml
+  - name: SelfHosted
+    default: false
+    type: boolean
+  - name: LinuxVmImage
+    default: ubuntu-20.04
+    type: string
+    values:
+      - ubuntu-20.04
+  - name: WindowsVmImage
+    default: windows-2019
+    type: string
+    values:
+      - windows-2019
 jobs:
   - job: BuildDotNet6_0
     condition: eq(parameters.SelfHosted, 'false')
