--- a/.azure/jobs/finalization.yml
+++ b/.azure/jobs/finalization.yml
@@ -1,10 +1,24 @@
-﻿jobs:
+﻿parameters:
+  - name: SelfHosted
+    default: false
+    type: boolean
+  - name: LinuxVmImage
+    default: ubuntu-20.04
+    type: string
+    values:
+      - ubuntu-20.04
+  - name: WindowsVmImage
+    default: windows-2019
+    type: string
+    values:
+      - windows-2019
+jobs:
   - job: Finalizer
-    condition: eq(variables.PIPELINES_SELF_HOSTED, 'false')
+    condition: eq(parameters.SelfHosted, 'false')
     displayName: 'Update BUILD_NUMBER (finalizer)'
     timeoutInMinutes: 15
     pool:
-      vmImage: $(PIPELINES_LINUX_VM_IMAGE)
+      vmImage: $(parameters.LinuxVmImage)
     steps:
       - template: ../steps/dotnet.yml
       - template: ../steps/install-minvertool.yml
@@ -12,11 +26,11 @@
       - template: ../steps/update-buildnumber.yml
 
   - job: Finalizer_SelfHosted
-    condition: eq(variables.PIPELINES_SELF_HOSTED, 'true')
+    condition: eq(parameters.SelfHosted, 'true')
     displayName: 'Update BUILD_NUMBER (finalizer, self-hosted)'
     timeoutInMinutes: 15
     pool:
-      name: $(PIPELINES_LINUX_VM_IMAGE)
+      name: $(parameters.LinuxVmImage)
     steps:
       - template: ../steps/dotnet.yml
       - template: ../steps/install-minvertool.yml
