--- a/.azure/jobs/deployment-development.yml
+++ b/.azure/jobs/deployment-development.yml
@@ -1,10 +1,24 @@
-﻿jobs:
+﻿parameters:
+  - name: SelfHosted
+    default: false
+    type: boolean
+  - name: LinuxVmImage
+    default: ubuntu-20.04
+    type: string
+    values:
+      - ubuntu-20.04
+  - name: WindowsVmImage
+    default: windows-2019
+    type: string
+    values:
+      - windows-2019
+jobs:
   - deployment: CD
-    condition: eq(variables.PIPELINES_SELF_HOSTED, 'false')
+    condition: eq(parameters.SelfHosted, 'false')
     displayName: 'Preview: release to private NuGet Feed'
     environment: 'Development'
     pool:
-      vmImage: $(PIPELINES_LINUX_VM_IMAGE)
+      vmImage: ${{ parameters.LinuxVmImage }}
     strategy:
       runOnce:
         deploy:
@@ -27,11 +41,11 @@
 
 
   - deployment: CD_SelfHosted
-    condition: eq(variables.PIPELINES_SELF_HOSTED, 'true')
+    condition: eq(parameters.SelfHosted, 'true')
     displayName: 'Preview: release to private NuGet Feed (self-hosted)'
     environment: 'Development'
     pool:
-      name: $(PIPELINES_LINUX_VM_IMAGE)
+      name: ${{ parameters.LinuxVmImage }}
     strategy:
       runOnce:
         deploy:
