--- a/.azure/pipelines.yml
+++ b/.azure/pipelines.yml
@@ -1,3 +1,17 @@
+parameters:
+  - name: SelfHosted
+    default: false
+    type: boolean
+  - name: LinuxVmImage
+    default: ubuntu-20.04
+    type: string
+    values:
+      - ubuntu-20.04
+  - name: WindowsVmImage
+    default: windows-2019
+    type: string
+    values:
+      - windows-2019
 name: $(DayOfYear)$(Rev:rr)
 trigger:
   branches:
