--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -1,18 +1,4 @@
-﻿parameters:
-  - name: SelfHosted
-    default: false
-    type: boolean
-  - name: LinuxVmImage
-    default: ubuntu-20.04
-    type: string
-    values:
-      - ubuntu-20.04
-  - name: WindowsVmImage
-    default: windows-2019
-    type: string
-    values:
-      - windows-2019
-jobs:
+﻿jobs:
   - job: BuildDotNet6_0
     condition: eq(parameters.SelfHosted, 'false')
     displayName: 'Development branch (net6, build, test, code-coverage, code-analysis)'
