--- a/.azure/jobs/deployment-development.yml
+++ b/.azure/jobs/deployment-development.yml
@@ -1,18 +1,4 @@
-﻿parameters:
-  - name: SelfHosted
-    default: false
-    type: boolean
-  - name: LinuxVmImage
-    default: ubuntu-20.04
-    type: string
-    values:
-      - ubuntu-20.04
-  - name: WindowsVmImage
-    default: windows-2019
-    type: string
-    values:
-      - windows-2019
-jobs:
+﻿jobs:
   - deployment: CD
     condition: eq(parameters.SelfHosted, 'false')
     displayName: 'Preview: release to private NuGet Feed'
