--- a/.azure/pipelines.yml
+++ b/.azure/pipelines.yml
@@ -1,17 +1,20 @@
 parameters:
   - name: SelfHosted
+    displayName: 'Use Self-Hosted Agents'
     default: false
     type: boolean
   - name: LinuxVmImage
-    default: ubuntu-20.04
+    displayName: 'Linux VM Image'
+    default: 'ubuntu-20.04'
     type: string
     values:
-      - ubuntu-20.04
+      - 'ubuntu-20.04'
   - name: WindowsVmImage
-    default: windows-2019
+    displayName: 'Windows VM Image'
+    default: 'windows-2019'
     type: string
     values:
-      - windows-2019
+      - 'windows-2019'
 name: $(DayOfYear)$(Rev:rr)
 trigger:
   branches:
