--- a/.azure/pipelines.yml
+++ b/.azure/pipelines.yml
@@ -1,15 +1,15 @@
 parameters:
-  - name: SelfHosted
+  - name: selfHosted
     displayName: 'Use Self-Hosted Agents'
     default: false
     type: boolean
-  - name: LinuxVmImage
+  - name: linuxVmImage
     displayName: 'Linux VM Image'
     default: 'ubuntu-20.04'
     type: string
     values:
       - 'ubuntu-20.04'
-  - name: WindowsVmImage
+  - name: windowsVmImage
     displayName: 'Windows VM Image'
     default: 'windows-2019'
     type: string
@@ -38,6 +38,10 @@ variables:
 stages:
   - ${{ if endsWith(variables['build.sourceBranch'], 'development') }}:
     - template: stages/development.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
   - ${{ if endsWith(variables['build.sourceBranch'], 'release') }}:
     - template: stages/staging.yml
   - ${{ if endsWith(variables['build.sourceBranch'], 'master') }}:
