--- a/.azure/stages/development.yml
+++ b/.azure/stages/development.yml
@@ -10,6 +10,10 @@
         value: 'Debug'
     jobs:
     - template: ../jobs/build-development.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
 
   - stage: UpdateBuildNumber
     displayName: 'Updating BUILD_BUILDNUMBER for development branch'
