--- a/.azure/stages/development.yml
+++ b/.azure/stages/development.yml
@@ -21,6 +21,10 @@
     dependsOn: BuildDevelopment
     jobs:
     - template: ../jobs/finalization.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
 
   - stage: DeployDevelopment
     displayName: 'Deployment for development branch'
@@ -30,3 +34,7 @@
     - group: BuildSecrets
     jobs:
     - template: ../jobs/deployment-development.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
