Getting tired of pipeline fun

--- a/.azure/jobs/finalization.yml
+++ b/.azure/jobs/finalization.yml
@@ -1,22 +1,12 @@
 ﻿jobs:
   - job: Finalizer
-    condition: eq(parameters.SelfHosted, 'false')
     displayName: 'Update BUILD_NUMBER (finalizer)'
     timeoutInMinutes: 15
     pool:
-      vmImage: $(parameters.LinuxVmImage)
-    steps:
-      - template: ../steps/dotnet.yml
-      - template: ../steps/install-minvertool.yml
-      - template: ../steps/minverversion-override.yml
-      - template: ../steps/update-buildnumber.yml
-
-  - job: Finalizer_SelfHosted
-    condition: eq(parameters.SelfHosted, 'true')
-    displayName: 'Update BUILD_NUMBER (finalizer, self-hosted)'
-    timeoutInMinutes: 15
-    pool:
-      name: $(parameters.LinuxVmImage)
+      ${{ if eq(parameters.selfHosted, 'true') }}:
+        name: ${{ parameters.linuxVmImage }}
+      ${{ if eq(parameters.selfHosted, 'false') }}:
+        vmImage: ${{ parameters.linuxVmImage }}
     steps:
       - template: ../steps/dotnet.yml
       - template: ../steps/install-minvertool.yml
