--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -1,45 +1,18 @@
 ﻿jobs:
   - job: BuildDotNet6_0
-    condition: eq(parameters.SelfHosted, 'false')
     displayName: 'Development branch (net6, build, test, code-coverage, code-analysis)'
     timeoutInMinutes: 120
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: ${{ parameters.LinuxVmImage }}
+          imageName: ${{ parameters.linuxVmImage }}
         Windows_Build_Test_and_Package:
-          imageName: ${{ parameters.WindowsVmImage }}
+          imageName: ${{ parameters.windowsVmImage }}
     pool:
-      vmImage: $(imageName)
-    variables:
-      - name: DotnetBuildName
-        value: 'net6.0'
-    steps:
-    - template: ../steps/dotnet.yml
-    - template: ../steps/install-minvertool.yml
-    - template: ../steps/install-reportgenerator.yml
-    - template: ../steps/download-snk.yml
-    - template: ../steps/minverversion-override.yml
-    - template: ../steps/restore.yml
-    - template: ../steps/sonarcloud-prepare.yml
-    - template: ../steps/build-net6_0.yml
-    - template: ../steps/unit-test.yml
-    - template: ../steps/codecov.yml
-    - template: ../steps/sonarcloud-finalize.yml
-    - template: ../steps/publish-artifact.yml
-
-  - job: BuildDotNet6_0_SelfHosted
-    condition: eq(parameters.SelfHosted, 'true')
-    displayName: 'Development branch (net6, build, test, code-coverage, code-analysis, self-hosted)'
-    timeoutInMinutes: 120
-    strategy:
-      matrix:
-        Linux_Build_and_Test:
-          imageName: ${{ parameters.LinuxVmImage }}
-        Windows_Build_Test_and_Package:
-          imageName: ${{ parameters.WindowsVmImage }}
-    pool:
-      name: $(imageName)
+      ${{ if eq(parameters.selfHosted, 'true') }}:
+        name: $(imageName)
+      ${{ if eq(parameters.selfHosted, 'false') }}:
+        vmImage: $(imageName)
     variables:
       - name: DotnetBuildName
         value: 'net6.0'
@@ -58,33 +31,16 @@
     - template: ../steps/publish-artifact.yml
 
   - job: PublishBuildArtifacts
-    condition: and(succeeded(), eq(parameters.SelfHosted, 'false'))
+    condition: succeeded()
     dependsOn:
     - BuildDotNet6_0
     displayName: 'Store NuGet Packages for Preview'
     timeoutInMinutes: 30
     pool:
-      vmImage: ${{ parameters.WindowsVmImage }}
-    variables:
-      - name: ArtifactPackageName
-        value: 'Preview'
-    steps:
-    - template: ../steps/dotnet.yml
-    - template: ../steps/install-minvertool.yml
-    - template: ../steps/minverversion-override.yml
-    - template: ../steps/publish-nuget.yml
-      parameters:
-        artifactPackages:
-          - "net6.0"
-
-  - job: PublishBuildArtifacts_SelfHosted
-    condition: and(succeeded(), eq(parameters.SelfHosted, 'true'))
-    dependsOn:
-    - BuildDotNet6_0_SelfHosted
-    displayName: 'Store NuGet Packages for Preview'
-    timeoutInMinutes: 30
-    pool:
-      name: ${{ parameters.WindowsVmImage }}
+      ${{ if eq(parameters.selfHosted, 'true') }}:
+        name: ${{ parameters.windowsVmImage }}
+      ${{ if eq(parameters.selfHosted, 'false') }}:
+        vmImage: ${{ parameters.windowsVmImage }}
     variables:
       - name: ArtifactPackageName
         value: 'Preview'
