--- a/.azure/jobs/deployment-development.yml
+++ b/.azure/jobs/deployment-development.yml
@@ -1,37 +1,12 @@
 ﻿jobs:
   - deployment: CD
-    condition: eq(parameters.SelfHosted, 'false')
     displayName: 'Preview: release to private NuGet Feed'
     environment: 'Development'
     pool:
-      vmImage: ${{ parameters.LinuxVmImage }}
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-            - task: DownloadBuildArtifacts@0
-              displayName: 'Download the build artifacts'
-              inputs:
-                buildType: 'current'
-                downloadType: 'single'
-                artifactName: 'Preview'
-                downloadPath: '$(System.DefaultWorkingDirectory)'
-
-            - task: NuGetCommand@2
-              displayName: 'Publish NuGet Packages to https://nuget.codebelt.net/v3/index.json'
-              inputs:
-                command: push
-                packagesToPush: '$(System.DefaultWorkingDirectory)/**/*.nupkg;$(System.DefaultWorkingDirectory)/**/*.snupkg'
-                nuGetFeedType: external
-                publishFeedCredentials: 'Codebelt-Nuget'
-
-
-  - deployment: CD_SelfHosted
-    condition: eq(parameters.SelfHosted, 'true')
-    displayName: 'Preview: release to private NuGet Feed (self-hosted)'
-    environment: 'Development'
-    pool:
-      name: ${{ parameters.LinuxVmImage }}
+      ${{ if eq(parameters.selfHosted, 'true') }}:
+        name: ${{ parameters.linuxVmImage }}
+      ${{ if eq(parameters.selfHosted, 'false') }}:
+        vmImage: ${{ parameters.linuxVmImage }}
     strategy:
       runOnce:
         deploy:
